[package]
name = "lights-broadlink"
version = "0.1.0"
authors = ["Izzy Swart <zenerboson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.6.0"
block-modes = "0.7.0"
futures = "0.3.8"
hex-literal = "0.3.1"
rand = "0.7.3"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
smol = "1.2.5"
thiserror = "1.0.22"
